fixup! sidekick alignment

--- a/ivr.css
+++ b/ivr.css
@@ -81,10 +81,6 @@
   display: table-cell;
   vertical-align: middle;
   margin-right: 2em;
-  width: 33%;
-}
-
-.verification-sidekick .certificate-image {
   width: 25%;
 }
 
